메인 퍼블리싱 진행

--- a/index.html
+++ b/index.html
@@ -89,55 +89,198 @@
           <div class="visual-inner">
             <!-- Swiper -->
             <div class="swiper visual-slide">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <!-- 실제 내용 배치 -->
-                  <div class="visual-slide-item">
-                    <a href="#">
-                      <img src="images/v1.png" />
-                    </a>
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="visual-slide-item">
-                    <a href="#">
-                      <img src="images/v2.jpg" />
-                    </a>
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="visual-slide-item">
-                    <a href="#">
-                      <img src="images/v3.jpg" />
-                    </a>
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="visual-slide-item">
-                    <a href="#">
-                      <img src="images/v4.jpg" />
-                    </a>
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="visual-slide-item">
-                    <a href="#">
-                      <img src="images/v5.jpg" />
-                    </a>
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="visual-slide-item">
-                    <a href="#">
-                      <img src="images/v6.png" />
-                    </a>
-                  </div>
-                </div>
-              </div>
+              <div class="swiper-wrapper"></div>
             </div>
             <!-- Swiper Pagination -->
             <button class="visual-slide-prev"></button>
             <button class="visual-slide-next"></button>
+          </div>
+        </section>
+        <!-- 쇼핑 추천 -->
+        <section class="recommend">
+          <div class="recommend-inner">
+            <div class="recommend-header">
+              <h2 class="recommend-title">쇼핑 추천</h2>
+              <span class="recommend-txt"
+                >할인이 쎄다! 지금, 특가 상품을 확인하세요.</span
+              >
+            </div>
+            <div class="recommend-main">
+              <div class="recommend-category">
+                <ul class="recommend-list">
+                  <li>
+                    <button class="recommend-cate-bt recommend-cate-bt-active">
+                      쎈딜
+                    </button>
+                  </li>
+                  <li>
+                    <button class="recommend-cate-bt">베스트</button>
+                  </li>
+                  <li>
+                    <button class="recommend-cate-bt">블프데이</button>
+                  </li>
+                  <li>
+                    <button class="recommend-cate-bt">디지털프라자</button>
+                  </li>
+                  <li>
+                    <a href="#" class="recommend-cate-bt">소담상회</a>
+                  </li>
+                </ul>
+              </div>
+              <!-- Swiper 영역 -->
+              <div class="swiper recommend-slide">
+                <div class="swiper-wrapper"></div>
+              </div>
+              <!-- Swiper Pagination -->
+              <button class="recommend-slide-prev"></button>
+              <button class="recommend-slide-next"></button>
+            </div>
+            <div class="recommend-footer">
+              <button>쇼핑 홈 바로가기 ></button>
+            </div>
+          </div>
+        </section>
+        <!-- 투어 특가  -->
+        <section class="tour">
+          <div class="tour-inner">
+            <div class="tour-header">
+              <h2 class="tour-title">투어 특가</h2>
+              <span class="tour-txt">해외여행은 인터파크다</span>
+            </div>
+            <!-- 투어 메인 슬라이드  -->
+            <div class="tour-main">
+              <div class="tour-category">
+                <ul class="tour-list">
+                  <li>
+                    <button class="tour-cate-bt tour-cate-bt-active">
+                      망설이면 품절
+                    </button>
+                  </li>
+                  <li>
+                    <button class="tour-cate-bt">패키지</button>
+                  </li>
+                  <li>
+                    <button class="tour-cate-bt">국내숙소</button>
+                  </li>
+                  <li>
+                    <button class="tour-cate-bt">해외숙소</button>
+                  </li>
+                </ul>
+              </div>
+              <!-- 슬라이드 영역 -->
+            </div>
+            <!-- 투어 푸터 -->
+            <div class="tour-footer">
+              <button>투어 홈 바로가기 ></button>
+            </div>
+          </div>
+        </section>
+        <!-- 타켓 랭킹 -->
+        <section class="ticket">
+          <div class="ticket-inner">
+            <div class="ticket-header">
+              <h2 class="ticket-title">티켓 랭킹</h2>
+              <span class="ticket-txt">오늘 뭐볼까? 지금 HOT한 공연</span>
+            </div>
+            <!-- 티켓랭킹 메인 슬라이드  -->
+            <div class="ticket-main">
+              <div class="ticket-category">
+                <ul class="ticket-list">
+                  <li>
+                    <button class="ticket-cate-bt ticket-cate-bt-active">
+                      뮤지컬
+                    </button>
+                  </li>
+                  <li>
+                    <button class="ticket-cate-bt">콘서트</button>
+                  </li>
+                  <li>
+                    <button class="ticket-cate-bt">스포츠</button>
+                  </li>
+                  <li>
+                    <button class="ticket-cate-bt">전시/행사</button>
+                  </li>
+                  <li>
+                    <button class="ticket-cate-bt">클래식/무용</button>
+                  </li>
+                  <li>
+                    <button class="ticket-cate-bt">아동/가족</button>
+                  </li>
+                  <li>
+                    <button class="ticket-cate-bt">연극</button>
+                  </li>
+                  <li>
+                    <button class="ticket-cate-bt">레저/캠핑</button>
+                  </li>
+                </ul>
+              </div>
+              <!-- 슬라이드 영역 -->
+            </div>
+            <!-- 티켓랭킹 푸터 -->
+            <div class="ticket-footer">
+              <button>티켓 홈 바로가기 ></button>
+            </div>
+          </div>
+        </section>
+        <!-- 인터파크 라이브 -->
+        <section class="live">
+          <div class="live-inner">
+            <div class="live-header">
+              <img src="/images/title_live.svg" alt="" />
+            </div>
+            <!-- 인터파크 메인 슬라이드  -->
+            <div class="live-main"></div>
+            <!-- 인터파크 라이브 푸터 -->
+            <div class="live-footer">
+              <button>인터파크 라이브 바로가기 ></button>
+            </div>
+          </div>
+        </section>
+        <!-- 오늘의 도서 -->
+        <section class="book">
+          <div class="book-inner">
+            <div class="book-header">
+              <h2 class="book-title">오늘의 도서</h2>
+              <span class="book-txt">지금 읽기 딱 좋은 책, 놓치지 마세요!</span>
+            </div>
+            <div class="book-main">
+              <div class="book-category">
+                <ul class="book-list">
+                  <li>
+                    <button class="book-cate-bt book-cate-bt-active">
+                      MD's Pick
+                    </button>
+                  </li>
+                  <li>
+                    <button class="book-cate-bt">베스트셀러</button>
+                  </li>
+                  <li>
+                    <button class="book-cate-bt">신간추천</button>
+                  </li>
+                  <li>
+                    <button class="book-cate-bt">특가할인</button>
+                  </li>
+                </ul>
+              </div>
+              <!-- 슬라이드 영역 -->
+            </div>
+            <div class="book-footer">
+              <button>도서 홈 바로가기 ></button>
+            </div>
+          </div>
+        </section>
+        <!-- 이벤트 -->
+        <section class="event">
+          <div class="event-inner">
+            <div class="event-header">
+              <h2 class="event-title">이벤트</h2>
+              <span class="event-txt"
+                >인터파크에서 할인혜택을 꼭 챙기세요.</span
+              >
+            </div>
+            <div class="event-main">
+              <!-- 슬라이드 영역 -->
+            </div>
           </div>
         </section>
       </div>
@@ -146,23 +289,11 @@
     </div>
   </body>
 </html>
+
 <!-- Swiper JS : 1. 기능을 먼저 불러들여 줌. -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
 <!-- Initialize Swiper : 2. 기능을 사용함 -->
-<script>
-  var swiper = new Swiper(".visual-slide", {
-    slidesPerView: 2,
-    spaceBetween: 24,
-    loop: true,
-    autoplay: {
-      delay: 1000,
-      disableOnInteraction: false,
-    },
-    speed: 500,
-    navigation: {
-      nextEl: ".visual-slide-next",
-      prevEl: ".visual-slide-prev",
-    },
-  });
-</script>
+<script src="/js/visual.js"></script>
+<!-- <script src="/js/recommend.js"></script> -->
+<script></script>
