쇼핑추천 디자인/기능 수정

--- a/index.html
+++ b/index.html
@@ -296,21 +296,11 @@
               <!-- 도서 슬라이드 -->
               <div class="book-slide-wrap">
                 <div class="swiper book-slide">
-                  <div class="swiper-wrapper">
-                    <div class="swiper-slide">Slide 1</div>
-                    <div class="swiper-slide">Slide 2</div>
-                    <div class="swiper-slide">Slide 3</div>
-                    <div class="swiper-slide">Slide 4</div>
-                    <div class="swiper-slide">Slide 5</div>
-                    <div class="swiper-slide">Slide 6</div>
-                    <div class="swiper-slide">Slide 7</div>
-                    <div class="swiper-slide">Slide 8</div>
-                    <div class="swiper-slide">Slide 9</div>
-                    <div class="swiper-slide">Slide 10</div>
-                    <div class="swiper-slide">Slide 11</div>
-                    <div class="swiper-slide">Slide 12</div>
-                  </div>
+                  <div class="swiper-wrapper"></div>
                 </div>
+                <!-- Swiper Pagination -->
+                <button class="book-slide-prev"></button>
+                <button class="book-slide-next"></button>
               </div>
             </div>
             <div class="book-footer">
@@ -331,21 +321,11 @@
               <!-- 라이브 슬라이드 -->
               <div class="event-slide-wrap">
                 <div class="swiper event-slide">
-                  <div class="swiper-wrapper">
-                    <div class="swiper-slide">Slide 1</div>
-                    <div class="swiper-slide">Slide 2</div>
-                    <div class="swiper-slide">Slide 3</div>
-                    <div class="swiper-slide">Slide 4</div>
-                    <div class="swiper-slide">Slide 5</div>
-                    <div class="swiper-slide">Slide 6</div>
-                    <div class="swiper-slide">Slide 7</div>
-                    <div class="swiper-slide">Slide 8</div>
-                    <div class="swiper-slide">Slide 9</div>
-                    <div class="swiper-slide">Slide 10</div>
-                    <div class="swiper-slide">Slide 11</div>
-                    <div class="swiper-slide">Slide 12</div>
-                  </div>
+                  <div class="swiper-wrapper"></div>
                 </div>
+                <!-- Swiper Pagination -->
+                <button class="event-slide-prev"></button>
+                <button class="event-slide-next"></button>
               </div>
             </div>
           </div>
@@ -368,9 +348,5 @@
 <script src="/js/tour.js"></script>
 <script src="/js/ticket.js"></script>
 <script src="/js/live.js"></script>
-<script>
-  const bookSwiper = new Swiper(".book-slide", {});
-</script>
-<script>
-  const eventSwiper = new Swiper(".event-slide", {});
-</script>
+<script src="/js/book.js"></script>
+<script src="/js/event.js"></script>
