인터파크 도서/이벤트 구현

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <!-- Swiper JS : 1. 기능을 먼저 불러들여 줌. -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper : 2. 기능을 사용함 -->
+    <script src="/js/visual.js"></script>
+    <script src="/js/recommend.js"></script>
+    <script src="/js/tour.js"></script>
+    <script src="/js/ticket.js"></script>
+    <script src="/js/live.js"></script>
+    <script src="/js/book.js"></script>
+    <script src="/js/event.js"></script>
   </head>
 
   <body>
@@ -333,20 +344,8 @@
       </div>
       <!-- 하단 영역 -->
       <footer class="footer">
-        <div>하단영역~~~~~</div>
+        <div></div>
       </footer>
     </div>
   </body>
 </html>
-
-<!-- Swiper JS : 1. 기능을 먼저 불러들여 줌. -->
-<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-
-<!-- Initialize Swiper : 2. 기능을 사용함 -->
-<script src="/js/visual.js"></script>
-<script src="/js/recommend.js"></script>
-<script src="/js/tour.js"></script>
-<script src="/js/ticket.js"></script>
-<script src="/js/live.js"></script>
-<script src="/js/book.js"></script>
-<script src="/js/event.js"></script>
