추천상품, 라이브 json 형식 수정

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
               <a class="logo" href="index.html"> </a>
               <div class="header-search">
                 <form class="search-form">
-                  <input type="text" class="search-word" />
+                  <input
+                    type="text"
+                    class="search-word"
+                    placeholder="80만원 여행상품권 이벤트"
+                  />
                   <input type="button" value="검색" class="search-bt" />
                 </form>
               </div>
