--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                   <div class="swiper-wrapper"></div>
                 </div>
                 <!-- Swiper Pagination -->
-                <button class="live-slide-prev"></button>
-                <button class="live-slide-next"></button>
+                <button class="slide-prev"></button>
+                <button class="slide-next"></button>
               </div>
             </div>
             <!-- 인터파크 라이브 푸터 -->
